--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
+    "@ngrx/store-devtools": "^4.1.1",
     "angular-permissions": "0.0.4",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
