--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.2.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^4.1.1",
+    "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "angular-permissions": "0.0.4",
